tenants/tenant-beta/backend-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-api-ingress
  namespace: tenant-beta
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /beta-api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-api-service
            port:
              number: 80
