tenants/tenant-beta/counter-service.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-beta-counter-service-ingress
  namespace: tenant-beta
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /beta-counter(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: counter-service-service
            port:
              number: 80
